Switch to the /host dir before launching notebookes in an AMI setup

--- a/docker/Dockerfile.py35
+++ b/docker/Dockerfile.py35
@@ -6,5 +6,5 @@ RUN /bin/bash install-py35.sh
 RUN rm ./install-py35.sh
 COPY start-notebook-py35 ./
 COPY my* ./
-ADD ./notebooks ./notebooks
+WORKDIR /host
 CMD ["/bin/bash", "start-notebook-py35"]
